# TimeFlipAgent

./: CMakeLists.txt
src/: CMakeLists.txt  Config.cpp  Config.h  Configuration.cpp  Configuration.h  Configuration.ui  Summary.cpp  Summary.h  Summary.ui  TrayApplication.cpp  TrayApplication.h  main.cpp
src/TimeFlipApiClient/: CMakeLists.txt  Credentials.h  Error.h  Task.h  TimeFlipApiClient.cpp  TimeFlipApiClient.h  UserInfo.h
src/TimeFlipBTClient/: CMakeLists.txt  TimeFlipBTClient.cpp  TimeFlipBTClient.h
src/TimeFlipClient/: CMakeLists.txt  ResponseResult.h  TimeFlipApiClient.cpp  TimeFlipApiClient.h
src/resources/: icons.qrc
